--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,15 @@ html,body{
   height: 100%;
   font-family: 'Poiret One';
 }
+h1{
+  font-size: 65px;
+}
+h2{
+  font-size: 40px;
+}
+p{
+  font-size: 26px;
+}
 nav{
   width: 100%;
   margin: 0 auto;
@@ -39,16 +48,66 @@ nav{
   justify-content: space-between;
   align-items: center;
 }
-.my-intro{
+.saying-hi{
   width: 50%;
+  padding-left:50px;
   padding-right:50px;
 }
 .my-portrait{
   width: 50%;
   display: flex;
   align-items: center;
+  padding-left:  100px;
 }
 .my-portrait img{
   width: 400px;
   height: auto;
+}
+/* <-------------------School projects-------------------> */
+.work{
+  width: 95%;
+  margin: 250px auto;
+}
+.title{
+  padding: 50px;
+  align-items: center; not working
+}
+.work-item{
+  width: 100%;
+  height: 400px;
+  background-color: grey;
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.project-describtion{
+  width: 70%;
+  color:white;
+  padding: 0 50px;
+}
+.work-img-container{
+  width: 40%;
+}
+
+.project-img-container img{
+  width: 80%;
+  padding-right: 50px;
+}
+.work-link{
+  text-decoration: none;
+}
+.work-link:hover > .work-item{
+  transform: scale(1.05);
+}
+.work-link .work-item{
+  transition: 0.3s ease-in-out;
+}
+.work-2{
+  background: rgba(0, 25, 53);
+}
+.work-3{
+  background: rgba(51, 0, 51);
+}
+.work-4{
+  background: rgba(0, 0, 0);
 }
