--- a/styles.css
+++ b/styles.css
@@ -192,3 +192,10 @@ nav{
   width: 300px;
   height: auto;
 }
+
+/* <--------------------------Bespoke--------------------------> */
+
+.bespoke-body{
+  width: 95%;
+  margin: 250px auto;
+}
