--- a/styles.css
+++ b/styles.css
@@ -199,3 +199,10 @@ nav{
   width: 95%;
   margin: 250px auto;
 }
+.line-processing{
+  width: 95%;
+  padding-bottom: 50px;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
