--- a/styles.css
+++ b/styles.css
@@ -247,3 +247,8 @@ footer{
   justify-content: space-between;
   align-items: center;
 }
+.placeMe{
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding: 50px 50%;
+}
